# govee-discovery

./: .gitignore  README.md  pyproject.toml
govee_discovery/: cli.py  control.py  discovery.py  interrogate.py  net.py  store.py
