[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "govee-lan-discovery"
version = "0.2.0"
description = "Govee LAN API discovery + registry + interrogation tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
govee-discovery = "govee_discovery.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["govee_discovery*"]
